eustagger/trunk/eustagger/morfosintaxia_raw/ana2morfsar.output
Terminals unused in grammar

   t_koma


Gramática

    0 $accept: testua $end

    1 testua: kohorteak

    2 kohorteak: kohorteak kohortea
    3          | kohortea

    4 kohortea: forma_lerro t_paren_ireki forma analisiak t_paren_itxi
    5         | forma_lerro t_paren_ireki forma t_paren_itxi
    6         | forma_lerro

    7 forma_lerro: t_forma_lerro

    8 forma: t_forma t_literal t_paren_itxi

    9 analisiak: analisiak analisia
   10          | analisia

   11 $@1: /* vacío */

   12 analisia: t_erregela $@1 t_paren_ireki anal lem_morf t_paren_itxi

   13 anal: t_paren_ireki t_anal t_sinbolo t_paren_itxi
   14     | t_paren_ireki t_anal t_dolar t_sinbolo t_paren_itxi

   15 $@2: /* vacío */

   16 lem_morf: $@2 lem_morfak

   17 lem_morfak: lem_morfak lema
   18           | lem_morfak morfema
   19           | lema
   20           | morfema

   21 lema: t_paren_ireki lema_ald resto_ald t_paren_itxi
   22     | t_paren_ireki lema_nor ezaugarriak t_paren_itxi

   23 resto_ald: aldaera ezaugarriak

   24 lema_ald: t_lema t_dolar t_literal t_paren_itxi

   25 lema_nor: t_lema t_literal t_paren_itxi

   26 aldaera: t_paren_ireki t_ald t_literal t_paren_itxi

   27 morfema: t_paren_ireki morfema_ald resto_ald t_paren_itxi
   28        | t_paren_ireki morfema_nor ezaugarriak t_paren_itxi

   29 morfema_ald: t_paren_ireki t_morfema t_dolar t_literal t_paren_itxi

   30 morfema_nor: t_paren_ireki t_morfema t_literal t_paren_itxi

   31 $@3: /* vacío */

   32 $@4: /* vacío */

   33 ezaugarriak: t_paren_ireki t_paren_ireki t_aldaera $@3 aldaeraosoa t_paren_ireki t_sarrera sarrera sarrera_twol lotura $@4 besteak t_paren_itxi

   34 $@5: /* vacío */

   35 ezaugarriak: t_paren_ireki t_paren_ireki t_sarrera sarrera $@5 sarrera_twol besteak t_paren_itxi

   36 lotura: t_paren_ireki t_lhb t_sinbolo t_paren_itxi
   37       | ezaugarria

   38 aldaeraosoa: hitzak t_paren_itxi t_paren_ireki t_atwol hitzak t_paren_itxi

   39 sarrera_twol: t_paren_ireki t_stwol hitzak t_paren_itxi
   40             | ezaugarria

   41 sarrera: hitzak t_paren_itxi

   42 hitzak: hitzak t_sinbolo
   43       | t_sinbolo
   44       | t_anal
   45       | t_sarrera

   46 besteak: normalak
   47        | /* vacío */

   48 normalak: normalak ezaugarria
   49         | ezaugarria

   50 ezaugarria: ezaugarrial
   51           | ezaugarrian

   52 ezaugarrial: t_paren_ireki t_sinbolo_set ezaugarriakfsn t_paren_itxi
   53            | t_paren_ireki t_sinbolo_list ezaugarriakn t_paren_itxi
   54            | t_paren_ireki t_sinbolo_list_sym sintaktikoak t_paren_itxi
   55            | t_paren_ireki t_sinbolo ezaugarriakfsn t_paren_itxi

   56 ezaugarriakfsn: ezaugarriakfsn ezaugarriafsn
   57               | ezaugarriafsn

   58 ezaugarriakn: ezaugarriakn ezaugarrian
   59             | ezaugarrian

   60 fsezaugarriak: t_sinbolo
   61              | t_sarrera

   62 ezaugarriafsn: t_paren_ireki fsezaugarriak hitzak t_paren_itxi

   63 ezaugarrian: t_paren_ireki t_erroa hitzak t_paren_itxi
   64            | t_paren_ireki t_sinbolo hitzak t_paren_itxi

   65 sintaktikoak: sintaktikoak funtzioa
   66             | /* vacío */

   67 funtzioa: t_paren_ireki t_funtzioak t_sinbolo t_paren_itxi


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
t_forma_lerro (258) 7
t_anal (259) 13 14 44
t_forma (260) 8
t_ald (261) 26
t_aldaera (262) 33
t_lema (263) 24 25
t_morfema (264) 29 30
t_sarrera (265) 33 35 45 61
t_funtzioak (266) 67
t_sinbolo (267) 13 14 36 42 43 55 60 64 67
t_sinbolo_list (268) 53
t_sinbolo_list_sym (269) 54
t_sinbolo_set (270) 52
t_literal (271) 8 24 25 26 29 30
t_dolar (272) 14 24 29
t_erregela (273) 12
t_erroa (274) 63
t_paren_ireki (275) 4 5 12 13 14 21 22 26 27 28 29 30 33 35 36 38 39
    52 53 54 55 62 63 64 67
t_paren_itxi (276) 4 5 8 12 13 14 21 22 24 25 26 27 28 29 30 33 35
    36 38 39 41 52 53 54 55 62 63 64 67
t_koma (277)
t_stwol (278) 39
t_atwol (279) 38
t_lhb (280) 36


No terminales con las reglas donde aparecen

$accept (26)
    en la izquierda: 0
testua (27)
    en la izquierda: 1, en la derecha: 0
kohorteak (28)
    en la izquierda: 2 3, en la derecha: 1 2
kohortea (29)
    en la izquierda: 4 5 6, en la derecha: 2 3
forma_lerro (30)
    en la izquierda: 7, en la derecha: 4 5 6
forma (31)
    en la izquierda: 8, en la derecha: 4 5
analisiak (32)
    en la izquierda: 9 10, en la derecha: 4 9
analisia (33)
    en la izquierda: 12, en la derecha: 9 10
$@1 (34)
    en la izquierda: 11, en la derecha: 12
anal (35)
    en la izquierda: 13 14, en la derecha: 12
lem_morf (36)
    en la izquierda: 16, en la derecha: 12
$@2 (37)
    en la izquierda: 15, en la derecha: 16
lem_morfak (38)
    en la izquierda: 17 18 19 20, en la derecha: 16 17 18
lema (39)
    en la izquierda: 21 22, en la derecha: 17 19
resto_ald (40)
    en la izquierda: 23, en la derecha: 21 27
lema_ald (41)
    en la izquierda: 24, en la derecha: 21
lema_nor (42)
    en la izquierda: 25, en la derecha: 22
aldaera (43)
    en la izquierda: 26, en la derecha: 23
morfema (44)
    en la izquierda: 27 28, en la derecha: 18 20
morfema_ald (45)
    en la izquierda: 29, en la derecha: 27
morfema_nor (46)
    en la izquierda: 30, en la derecha: 28
ezaugarriak (47)
    en la izquierda: 33 35, en la derecha: 22 23 28
$@3 (48)
    en la izquierda: 31, en la derecha: 33
$@4 (49)
    en la izquierda: 32, en la derecha: 33
$@5 (50)
    en la izquierda: 34, en la derecha: 35
lotura (51)
    en la izquierda: 36 37, en la derecha: 33
aldaeraosoa (52)
    en la izquierda: 38, en la derecha: 33
sarrera_twol (53)
    en la izquierda: 39 40, en la derecha: 33 35
sarrera (54)
    en la izquierda: 41, en la derecha: 33 35
hitzak (55)
    en la izquierda: 42 43 44 45, en la derecha: 38 39 41 42 62 63
    64
besteak (56)
    en la izquierda: 46 47, en la derecha: 33 35
normalak (57)
    en la izquierda: 48 49, en la derecha: 46 48
ezaugarria (58)
    en la izquierda: 50 51, en la derecha: 37 40 48 49
ezaugarrial (59)
    en la izquierda: 52 53 54 55, en la derecha: 50
ezaugarriakfsn (60)
    en la izquierda: 56 57, en la derecha: 52 55 56
ezaugarriakn (61)
    en la izquierda: 58 59, en la derecha: 53 58
fsezaugarriak (62)
    en la izquierda: 60 61, en la derecha: 62
ezaugarriafsn (63)
    en la izquierda: 62, en la derecha: 56 57
ezaugarrian (64)
    en la izquierda: 63 64, en la derecha: 51 58 59
sintaktikoak (65)
    en la izquierda: 65 66, en la derecha: 54 65
funtzioa (66)
    en la izquierda: 67, en la derecha: 65


estado 0

    0 $accept: . testua $end

    t_forma_lerro  desplazar e ir al estado 1

    testua       ir al estado 2
    kohorteak    ir al estado 3
    kohortea     ir al estado 4
    forma_lerro  ir al estado 5


estado 1

    7 forma_lerro: t_forma_lerro .

    $default  reduce usando la regla 7 (forma_lerro)


estado 2

    0 $accept: testua . $end

    $end  desplazar e ir al estado 6


estado 3

    1 testua: kohorteak .
    2 kohorteak: kohorteak . kohortea

    t_forma_lerro  desplazar e ir al estado 1

    $default  reduce usando la regla 1 (testua)

    kohortea     ir al estado 7
    forma_lerro  ir al estado 5


estado 4

    3 kohorteak: kohortea .

    $default  reduce usando la regla 3 (kohorteak)


estado 5

    4 kohortea: forma_lerro . t_paren_ireki forma analisiak t_paren_itxi
    5         | forma_lerro . t_paren_ireki forma t_paren_itxi
    6         | forma_lerro .

    t_paren_ireki  desplazar e ir al estado 8

    $default  reduce usando la regla 6 (kohortea)


estado 6

    0 $accept: testua $end .

    $default  aceptar


estado 7

    2 kohorteak: kohorteak kohortea .

    $default  reduce usando la regla 2 (kohorteak)


estado 8

    4 kohortea: forma_lerro t_paren_ireki . forma analisiak t_paren_itxi
    5         | forma_lerro t_paren_ireki . forma t_paren_itxi

    t_forma  desplazar e ir al estado 9

    forma  ir al estado 10


estado 9

    8 forma: t_forma . t_literal t_paren_itxi

    t_literal  desplazar e ir al estado 11


estado 10

    4 kohortea: forma_lerro t_paren_ireki forma . analisiak t_paren_itxi
    5         | forma_lerro t_paren_ireki forma . t_paren_itxi

    t_erregela    desplazar e ir al estado 12
    t_paren_itxi  desplazar e ir al estado 13

    analisiak  ir al estado 14
    analisia   ir al estado 15


estado 11

    8 forma: t_forma t_literal . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 16


estado 12

   12 analisia: t_erregela . $@1 t_paren_ireki anal lem_morf t_paren_itxi

    $default  reduce usando la regla 11 ($@1)

    $@1  ir al estado 17


estado 13

    5 kohortea: forma_lerro t_paren_ireki forma t_paren_itxi .

    $default  reduce usando la regla 5 (kohortea)


estado 14

    4 kohortea: forma_lerro t_paren_ireki forma analisiak . t_paren_itxi
    9 analisiak: analisiak . analisia

    t_erregela    desplazar e ir al estado 12
    t_paren_itxi  desplazar e ir al estado 18

    analisia  ir al estado 19


estado 15

   10 analisiak: analisia .

    $default  reduce usando la regla 10 (analisiak)


estado 16

    8 forma: t_forma t_literal t_paren_itxi .

    $default  reduce usando la regla 8 (forma)


estado 17

   12 analisia: t_erregela $@1 . t_paren_ireki anal lem_morf t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 20


estado 18

    4 kohortea: forma_lerro t_paren_ireki forma analisiak t_paren_itxi .

    $default  reduce usando la regla 4 (kohortea)


estado 19

    9 analisiak: analisiak analisia .

    $default  reduce usando la regla 9 (analisiak)


estado 20

   12 analisia: t_erregela $@1 t_paren_ireki . anal lem_morf t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 21

    anal  ir al estado 22


estado 21

   13 anal: t_paren_ireki . t_anal t_sinbolo t_paren_itxi
   14     | t_paren_ireki . t_anal t_dolar t_sinbolo t_paren_itxi

    t_anal  desplazar e ir al estado 23


estado 22

   12 analisia: t_erregela $@1 t_paren_ireki anal . lem_morf t_paren_itxi

    $default  reduce usando la regla 15 ($@2)

    lem_morf  ir al estado 24
    $@2       ir al estado 25


estado 23

   13 anal: t_paren_ireki t_anal . t_sinbolo t_paren_itxi
   14     | t_paren_ireki t_anal . t_dolar t_sinbolo t_paren_itxi

    t_sinbolo  desplazar e ir al estado 26
    t_dolar    desplazar e ir al estado 27


estado 24

   12 analisia: t_erregela $@1 t_paren_ireki anal lem_morf . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 28


estado 25

   16 lem_morf: $@2 . lem_morfak

    t_paren_ireki  desplazar e ir al estado 29

    lem_morfak  ir al estado 30
    lema        ir al estado 31
    morfema     ir al estado 32


estado 26

   13 anal: t_paren_ireki t_anal t_sinbolo . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 33


estado 27

   14 anal: t_paren_ireki t_anal t_dolar . t_sinbolo t_paren_itxi

    t_sinbolo  desplazar e ir al estado 34


estado 28

   12 analisia: t_erregela $@1 t_paren_ireki anal lem_morf t_paren_itxi .

    $default  reduce usando la regla 12 (analisia)


estado 29

   21 lema: t_paren_ireki . lema_ald resto_ald t_paren_itxi
   22     | t_paren_ireki . lema_nor ezaugarriak t_paren_itxi
   27 morfema: t_paren_ireki . morfema_ald resto_ald t_paren_itxi
   28        | t_paren_ireki . morfema_nor ezaugarriak t_paren_itxi

    t_lema         desplazar e ir al estado 35
    t_paren_ireki  desplazar e ir al estado 36

    lema_ald     ir al estado 37
    lema_nor     ir al estado 38
    morfema_ald  ir al estado 39
    morfema_nor  ir al estado 40


estado 30

   16 lem_morf: $@2 lem_morfak .
   17 lem_morfak: lem_morfak . lema
   18           | lem_morfak . morfema

    t_paren_ireki  desplazar e ir al estado 29

    $default  reduce usando la regla 16 (lem_morf)

    lema     ir al estado 41
    morfema  ir al estado 42


estado 31

   19 lem_morfak: lema .

    $default  reduce usando la regla 19 (lem_morfak)


estado 32

   20 lem_morfak: morfema .

    $default  reduce usando la regla 20 (lem_morfak)


estado 33

   13 anal: t_paren_ireki t_anal t_sinbolo t_paren_itxi .

    $default  reduce usando la regla 13 (anal)


estado 34

   14 anal: t_paren_ireki t_anal t_dolar t_sinbolo . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 43


estado 35

   24 lema_ald: t_lema . t_dolar t_literal t_paren_itxi
   25 lema_nor: t_lema . t_literal t_paren_itxi

    t_literal  desplazar e ir al estado 44
    t_dolar    desplazar e ir al estado 45


estado 36

   29 morfema_ald: t_paren_ireki . t_morfema t_dolar t_literal t_paren_itxi
   30 morfema_nor: t_paren_ireki . t_morfema t_literal t_paren_itxi

    t_morfema  desplazar e ir al estado 46


estado 37

   21 lema: t_paren_ireki lema_ald . resto_ald t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 47

    resto_ald  ir al estado 48
    aldaera    ir al estado 49


estado 38

   22 lema: t_paren_ireki lema_nor . ezaugarriak t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 50

    ezaugarriak  ir al estado 51


estado 39

   27 morfema: t_paren_ireki morfema_ald . resto_ald t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 47

    resto_ald  ir al estado 52
    aldaera    ir al estado 49


estado 40

   28 morfema: t_paren_ireki morfema_nor . ezaugarriak t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 50

    ezaugarriak  ir al estado 53


estado 41

   17 lem_morfak: lem_morfak lema .

    $default  reduce usando la regla 17 (lem_morfak)


estado 42

   18 lem_morfak: lem_morfak morfema .

    $default  reduce usando la regla 18 (lem_morfak)


estado 43

   14 anal: t_paren_ireki t_anal t_dolar t_sinbolo t_paren_itxi .

    $default  reduce usando la regla 14 (anal)


estado 44

   25 lema_nor: t_lema t_literal . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 54


estado 45

   24 lema_ald: t_lema t_dolar . t_literal t_paren_itxi

    t_literal  desplazar e ir al estado 55


estado 46

   29 morfema_ald: t_paren_ireki t_morfema . t_dolar t_literal t_paren_itxi
   30 morfema_nor: t_paren_ireki t_morfema . t_literal t_paren_itxi

    t_literal  desplazar e ir al estado 56
    t_dolar    desplazar e ir al estado 57


estado 47

   26 aldaera: t_paren_ireki . t_ald t_literal t_paren_itxi

    t_ald  desplazar e ir al estado 58


estado 48

   21 lema: t_paren_ireki lema_ald resto_ald . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 59


estado 49

   23 resto_ald: aldaera . ezaugarriak

    t_paren_ireki  desplazar e ir al estado 50

    ezaugarriak  ir al estado 60


estado 50

   33 ezaugarriak: t_paren_ireki . t_paren_ireki t_aldaera $@3 aldaeraosoa t_paren_ireki t_sarrera sarrera sarrera_twol lotura $@4 besteak t_paren_itxi
   35            | t_paren_ireki . t_paren_ireki t_sarrera sarrera $@5 sarrera_twol besteak t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 61


estado 51

   22 lema: t_paren_ireki lema_nor ezaugarriak . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 62


estado 52

   27 morfema: t_paren_ireki morfema_ald resto_ald . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 63


estado 53

   28 morfema: t_paren_ireki morfema_nor ezaugarriak . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 64


estado 54

   25 lema_nor: t_lema t_literal t_paren_itxi .

    $default  reduce usando la regla 25 (lema_nor)


estado 55

   24 lema_ald: t_lema t_dolar t_literal . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 65


estado 56

   30 morfema_nor: t_paren_ireki t_morfema t_literal . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 66


estado 57

   29 morfema_ald: t_paren_ireki t_morfema t_dolar . t_literal t_paren_itxi

    t_literal  desplazar e ir al estado 67


estado 58

   26 aldaera: t_paren_ireki t_ald . t_literal t_paren_itxi

    t_literal  desplazar e ir al estado 68


estado 59

   21 lema: t_paren_ireki lema_ald resto_ald t_paren_itxi .

    $default  reduce usando la regla 21 (lema)


estado 60

   23 resto_ald: aldaera ezaugarriak .

    $default  reduce usando la regla 23 (resto_ald)


estado 61

   33 ezaugarriak: t_paren_ireki t_paren_ireki . t_aldaera $@3 aldaeraosoa t_paren_ireki t_sarrera sarrera sarrera_twol lotura $@4 besteak t_paren_itxi
   35            | t_paren_ireki t_paren_ireki . t_sarrera sarrera $@5 sarrera_twol besteak t_paren_itxi

    t_aldaera  desplazar e ir al estado 69
    t_sarrera  desplazar e ir al estado 70


estado 62

   22 lema: t_paren_ireki lema_nor ezaugarriak t_paren_itxi .

    $default  reduce usando la regla 22 (lema)


estado 63

   27 morfema: t_paren_ireki morfema_ald resto_ald t_paren_itxi .

    $default  reduce usando la regla 27 (morfema)


estado 64

   28 morfema: t_paren_ireki morfema_nor ezaugarriak t_paren_itxi .

    $default  reduce usando la regla 28 (morfema)


estado 65

   24 lema_ald: t_lema t_dolar t_literal t_paren_itxi .

    $default  reduce usando la regla 24 (lema_ald)


estado 66

   30 morfema_nor: t_paren_ireki t_morfema t_literal t_paren_itxi .

    $default  reduce usando la regla 30 (morfema_nor)


estado 67

   29 morfema_ald: t_paren_ireki t_morfema t_dolar t_literal . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 71


estado 68

   26 aldaera: t_paren_ireki t_ald t_literal . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 72


estado 69

   33 ezaugarriak: t_paren_ireki t_paren_ireki t_aldaera . $@3 aldaeraosoa t_paren_ireki t_sarrera sarrera sarrera_twol lotura $@4 besteak t_paren_itxi

    $default  reduce usando la regla 31 ($@3)

    $@3  ir al estado 73


estado 70

   35 ezaugarriak: t_paren_ireki t_paren_ireki t_sarrera . sarrera $@5 sarrera_twol besteak t_paren_itxi

    t_anal     desplazar e ir al estado 74
    t_sarrera  desplazar e ir al estado 75
    t_sinbolo  desplazar e ir al estado 76

    sarrera  ir al estado 77
    hitzak   ir al estado 78


estado 71

   29 morfema_ald: t_paren_ireki t_morfema t_dolar t_literal t_paren_itxi .

    $default  reduce usando la regla 29 (morfema_ald)


estado 72

   26 aldaera: t_paren_ireki t_ald t_literal t_paren_itxi .

    $default  reduce usando la regla 26 (aldaera)


estado 73

   33 ezaugarriak: t_paren_ireki t_paren_ireki t_aldaera $@3 . aldaeraosoa t_paren_ireki t_sarrera sarrera sarrera_twol lotura $@4 besteak t_paren_itxi

    t_anal     desplazar e ir al estado 74
    t_sarrera  desplazar e ir al estado 75
    t_sinbolo  desplazar e ir al estado 76

    aldaeraosoa  ir al estado 79
    hitzak       ir al estado 80


estado 74

   44 hitzak: t_anal .

    $default  reduce usando la regla 44 (hitzak)


estado 75

   45 hitzak: t_sarrera .

    $default  reduce usando la regla 45 (hitzak)


estado 76

   43 hitzak: t_sinbolo .

    $default  reduce usando la regla 43 (hitzak)


estado 77

   35 ezaugarriak: t_paren_ireki t_paren_ireki t_sarrera sarrera . $@5 sarrera_twol besteak t_paren_itxi

    $default  reduce usando la regla 34 ($@5)

    $@5  ir al estado 81


estado 78

   41 sarrera: hitzak . t_paren_itxi
   42 hitzak: hitzak . t_sinbolo

    t_sinbolo     desplazar e ir al estado 82
    t_paren_itxi  desplazar e ir al estado 83


estado 79

   33 ezaugarriak: t_paren_ireki t_paren_ireki t_aldaera $@3 aldaeraosoa . t_paren_ireki t_sarrera sarrera sarrera_twol lotura $@4 besteak t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 84


estado 80

   38 aldaeraosoa: hitzak . t_paren_itxi t_paren_ireki t_atwol hitzak t_paren_itxi
   42 hitzak: hitzak . t_sinbolo

    t_sinbolo     desplazar e ir al estado 82
    t_paren_itxi  desplazar e ir al estado 85


estado 81

   35 ezaugarriak: t_paren_ireki t_paren_ireki t_sarrera sarrera $@5 . sarrera_twol besteak t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 86

    sarrera_twol  ir al estado 87
    ezaugarria    ir al estado 88
    ezaugarrial   ir al estado 89
    ezaugarrian   ir al estado 90


estado 82

   42 hitzak: hitzak t_sinbolo .

    $default  reduce usando la regla 42 (hitzak)


estado 83

   41 sarrera: hitzak t_paren_itxi .

    $default  reduce usando la regla 41 (sarrera)


estado 84

   33 ezaugarriak: t_paren_ireki t_paren_ireki t_aldaera $@3 aldaeraosoa t_paren_ireki . t_sarrera sarrera sarrera_twol lotura $@4 besteak t_paren_itxi

    t_sarrera  desplazar e ir al estado 91


estado 85

   38 aldaeraosoa: hitzak t_paren_itxi . t_paren_ireki t_atwol hitzak t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 92


estado 86

   39 sarrera_twol: t_paren_ireki . t_stwol hitzak t_paren_itxi
   52 ezaugarrial: t_paren_ireki . t_sinbolo_set ezaugarriakfsn t_paren_itxi
   53            | t_paren_ireki . t_sinbolo_list ezaugarriakn t_paren_itxi
   54            | t_paren_ireki . t_sinbolo_list_sym sintaktikoak t_paren_itxi
   55            | t_paren_ireki . t_sinbolo ezaugarriakfsn t_paren_itxi
   63 ezaugarrian: t_paren_ireki . t_erroa hitzak t_paren_itxi
   64            | t_paren_ireki . t_sinbolo hitzak t_paren_itxi

    t_sinbolo           desplazar e ir al estado 93
    t_sinbolo_list      desplazar e ir al estado 94
    t_sinbolo_list_sym  desplazar e ir al estado 95
    t_sinbolo_set       desplazar e ir al estado 96
    t_erroa             desplazar e ir al estado 97
    t_stwol             desplazar e ir al estado 98


estado 87

   35 ezaugarriak: t_paren_ireki t_paren_ireki t_sarrera sarrera $@5 sarrera_twol . besteak t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 99

    $default  reduce usando la regla 47 (besteak)

    besteak      ir al estado 100
    normalak     ir al estado 101
    ezaugarria   ir al estado 102
    ezaugarrial  ir al estado 89
    ezaugarrian  ir al estado 90


estado 88

   40 sarrera_twol: ezaugarria .

    $default  reduce usando la regla 40 (sarrera_twol)


estado 89

   50 ezaugarria: ezaugarrial .

    $default  reduce usando la regla 50 (ezaugarria)


estado 90

   51 ezaugarria: ezaugarrian .

    $default  reduce usando la regla 51 (ezaugarria)


estado 91

   33 ezaugarriak: t_paren_ireki t_paren_ireki t_aldaera $@3 aldaeraosoa t_paren_ireki t_sarrera . sarrera sarrera_twol lotura $@4 besteak t_paren_itxi

    t_anal     desplazar e ir al estado 74
    t_sarrera  desplazar e ir al estado 75
    t_sinbolo  desplazar e ir al estado 76

    sarrera  ir al estado 103
    hitzak   ir al estado 78


estado 92

   38 aldaeraosoa: hitzak t_paren_itxi t_paren_ireki . t_atwol hitzak t_paren_itxi

    t_atwol  desplazar e ir al estado 104


estado 93

   55 ezaugarrial: t_paren_ireki t_sinbolo . ezaugarriakfsn t_paren_itxi
   64 ezaugarrian: t_paren_ireki t_sinbolo . hitzak t_paren_itxi

    t_anal         desplazar e ir al estado 74
    t_sarrera      desplazar e ir al estado 75
    t_sinbolo      desplazar e ir al estado 76
    t_paren_ireki  desplazar e ir al estado 105

    hitzak          ir al estado 106
    ezaugarriakfsn  ir al estado 107
    ezaugarriafsn   ir al estado 108


estado 94

   53 ezaugarrial: t_paren_ireki t_sinbolo_list . ezaugarriakn t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 109

    ezaugarriakn  ir al estado 110
    ezaugarrian   ir al estado 111


estado 95

   54 ezaugarrial: t_paren_ireki t_sinbolo_list_sym . sintaktikoak t_paren_itxi

    $default  reduce usando la regla 66 (sintaktikoak)

    sintaktikoak  ir al estado 112


estado 96

   52 ezaugarrial: t_paren_ireki t_sinbolo_set . ezaugarriakfsn t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 105

    ezaugarriakfsn  ir al estado 113
    ezaugarriafsn   ir al estado 108


estado 97

   63 ezaugarrian: t_paren_ireki t_erroa . hitzak t_paren_itxi

    t_anal     desplazar e ir al estado 74
    t_sarrera  desplazar e ir al estado 75
    t_sinbolo  desplazar e ir al estado 76

    hitzak  ir al estado 114


estado 98

   39 sarrera_twol: t_paren_ireki t_stwol . hitzak t_paren_itxi

    t_anal     desplazar e ir al estado 74
    t_sarrera  desplazar e ir al estado 75
    t_sinbolo  desplazar e ir al estado 76

    hitzak  ir al estado 115


estado 99

   52 ezaugarrial: t_paren_ireki . t_sinbolo_set ezaugarriakfsn t_paren_itxi
   53            | t_paren_ireki . t_sinbolo_list ezaugarriakn t_paren_itxi
   54            | t_paren_ireki . t_sinbolo_list_sym sintaktikoak t_paren_itxi
   55            | t_paren_ireki . t_sinbolo ezaugarriakfsn t_paren_itxi
   63 ezaugarrian: t_paren_ireki . t_erroa hitzak t_paren_itxi
   64            | t_paren_ireki . t_sinbolo hitzak t_paren_itxi

    t_sinbolo           desplazar e ir al estado 93
    t_sinbolo_list      desplazar e ir al estado 94
    t_sinbolo_list_sym  desplazar e ir al estado 95
    t_sinbolo_set       desplazar e ir al estado 96
    t_erroa             desplazar e ir al estado 97


estado 100

   35 ezaugarriak: t_paren_ireki t_paren_ireki t_sarrera sarrera $@5 sarrera_twol besteak . t_paren_itxi

    t_paren_itxi  desplazar e ir al estado 116


estado 101

   46 besteak: normalak .
   48 normalak: normalak . ezaugarria

    t_paren_ireki  desplazar e ir al estado 99

    $default  reduce usando la regla 46 (besteak)

    ezaugarria   ir al estado 117
    ezaugarrial  ir al estado 89
    ezaugarrian  ir al estado 90


estado 102

   49 normalak: ezaugarria .

    $default  reduce usando la regla 49 (normalak)


estado 103

   33 ezaugarriak: t_paren_ireki t_paren_ireki t_aldaera $@3 aldaeraosoa t_paren_ireki t_sarrera sarrera . sarrera_twol lotura $@4 besteak t_paren_itxi

    t_paren_ireki  desplazar e ir al estado 86

    sarrera_twol  ir al estado 118
    ezaugarria    ir al estado 88
    ezaugarrial   ir al estado 89
    ezaugarrian   ir al estado 90


estado 104

   38 aldaeraosoa: hitzak t_paren_itxi t_paren_ireki t_atwol . hitzak t_paren_itxi

    t_anal     desplazar e ir al estado 74
    t_sarrera  desplazar e ir al estado 75
    t_sinbolo  desplazar e ir al estado 76

    hitzak  ir al estado 119


estado 105

   62 ezaugarriafsn: t_paren_ireki . fsezaugarriak hitzak t_paren_itxi

    t_sarrera  desplazar e ir al estado 120
    t_sinbolo  desplazar e ir al estado 121

    fsezaugarriak  ir al estado 122


estado 106

   42 hitzak: hitzak . t_sinbolo
   64 ezaugarrian: t_paren_ireki t_sinbolo hitzak . t_paren_itxi

    t_sinbolo     desplazar e ir al estado 82
    t_paren_itxi  desplazar e ir al estado 123


estado 107

   55 ezaugarrial: t_paren_ireki t_sinbolo ezaugarriakfsn . t_paren_itxi
   56 ezaugarriakfsn: ezaugarriakfsn . ezaugarriafsn

    t_paren_ireki  desplazar e ir al estado 105
    t_paren_itxi   desplazar e ir al estado 124

    ezaugarriafsn  ir al estado 125


estado 108

   57 ezaugarriakfsn: ezaugarriafsn .

    $default  reduce usando la regla 57 (ezaugarriakfsn)


estado 109

   63 ezaugarrian: t_paren_ireki . t_erroa hitzak t_paren_itxi
   64            | t_paren_ireki . t_sinbolo hitzak t_paren_itxi

    t_sinbolo  desplazar e ir al estado 126
    t_erroa    desplazar e ir al estado 97


estado 110

   53 ezaugarrial: t_paren_ireki t_sinbolo_list ezaugarriakn . t_paren_itxi
   58 ezaugarriakn: ezaugarriakn . ezaugarrian

    t_paren_ireki  desplazar e ir al estado 109
    t_paren_itxi   desplazar e ir al estado 127

    ezaugarrian  ir al estado 128


estado 111

   59 ezaugarriakn: ezaugarrian .

    $default  reduce usando la regla 59 (ezaugarriakn)


estado 112

   54 ezaugarrial: t_paren_ireki t_sinbolo_list_sym sintaktikoak . t_paren_itxi
   65 sintaktikoak: sintaktikoak . funtzioa

    t_paren_ireki  desplazar e ir al estado 129
    t_paren_itxi   desplazar e ir al estado 130

    funtzioa  ir al estado 131


estado 113

   52 ezaugarrial: t_paren_ireki t_sinbolo_set ezaugarriakfsn . t_paren_itxi
   56 ezaugarriakfsn: ezaugarriakfsn . ezaugarriafsn

    t_paren_ireki  desplazar e ir al estado 105
    t_paren_itxi   desplazar e ir al estado 132

    ezaugarriafsn  ir al estado 125


estado 114

   42 hitzak: hitzak . t_sinbolo
   63 ezaugarrian: t_paren_ireki t_erroa hitzak . t_paren_itxi

    t_sinbolo     desplazar e ir al estado 82
    t_paren_itxi  desplazar e ir al estado 133


estado 115

   39 sarrera_twol: t_paren_ireki t_stwol hitzak . t_paren_itxi
   42 hitzak: hitzak . t_sinbolo

    t_sinbolo     desplazar e ir al estado 82
    t_paren_itxi  desplazar e ir al estado 134


estado 116

   35 ezaugarriak: t_paren_ireki t_paren_ireki t_sarrera sarrera $@5 sarrera_twol besteak t_paren_itxi .

    $default  reduce usando la regla 35 (ezaugarriak)


estado 117

   48 normalak: normalak ezaugarria .

    $default  reduce usando la regla 48 (normalak)


estado 118

   33 ezaugarriak: t_paren_ireki t_paren_ireki t_aldaera $@3 aldaeraosoa t_paren_ireki t_sarrera sarrera sarrera_twol . lotura $@4 besteak t_paren_itxi
